--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </section>
 </main >
 <footer>
-    <P>Desenvolvido por Eduarda e Larissa</P>
+    <P>Desenvolvido por Duhhhh</P>
 </footer>
 </body>
 </html>
