--- a/index.html
+++ b/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redes sociais</title>
+    <title>Meu Perfil</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <background-color:var
-<header>
-    <h1>Relatorio das redes sociais</h1>
-    <nav>
-        <a href="index.html">Mundo</a>
-        <a href="#">Minha escola</a>
-    </nav>
-</header>
-<main class="Gráficos-Section">
-    <sectio id="Graficos-container" class="Graficos-container">
+    <header>
+        <h1>Relatorio das Redes Sociais</h1>
+        <nav>
+            <a href="index.html">Mundo</a>
+            <a href="#">Minha escola</a>
+        </nav>
+    </header>
+    <main class="graficos-section">
+        <section id="graficos-container" class="graficos-container">
 
-    </section>
-</main >
-<footer>
-    <P>Desenvolvido por Duhhhh</P>
-</footer>
+        </section>
+
+    </main>
+    <footer>
+       <p>Desenvolvido por Prof Fernando o Feioso</p> 
+    </footer>
+
 </body>
 </html>
