--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     </main>
     <footer>
-       <p>Desenvolvido por Prof Fernando o Feioso</p> 
+       <p>Desenvolvido por duh</p> 
     </footer>
 
 </body>
