--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <footer>
        <p>Desenvolvido por duh</p> 
     </footer>
-
+    <script type=”module” src=”graficos/
+    informacoesGlobais.js”></script>
 </body>
 </html>
